fix z-index

--- a/src/features/projects/styles/Filters.module.scss
+++ b/src/features/projects/styles/Filters.module.scss
@@ -10,6 +10,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 20px;
+  z-index: 13;
 }
 
 .filterButton {
@@ -43,6 +44,7 @@
   }
   > .dropdownContainer {
     display: none;
+    top: 10px;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
